--- a/orientation.html
+++ b/orientation.html
@@ -35,7 +35,7 @@
 			}
 
 			var location = {
-				x: event["alpha"],
+				x: location0.x + event["alpha"],
 				y: location0.y + event["beta"] * 3
             }
 
