--- a/accelerometer.html
+++ b/accelerometer.html
@@ -29,7 +29,7 @@ try {
 }
     function reloadOnShake(accelerometer) {
       var output = document.getElementById("output");
-			output.innerHTML = accelerometer.x;
+			output.innerHTML = accelerometer;
     }
 	</script>
 </head>
