--- a/accelerometer.html
+++ b/accelerometer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Orentation</title>
+	<title>Accelerometer</title>
 	<script type="text/javascript">
 		let accelerometer = null;
 try {
