--- a/accelerometer.html
+++ b/accelerometer.html
@@ -29,8 +29,8 @@ try {
 }
     function reloadOnShake(accelerometer) {
       var X = document.getElementById("x");
-	    var Y = document.getElementById("x");
-	    var Z = document.getElementById("x");
+	    var Y = document.getElementById("y");
+	    var Z = document.getElementById("z");
 	    X.innerHTML = accelerometer.x;
 	    Y.innerHTML = accelerometer.y;
 	    Z.innerHTML = accelerometer.z;
