--- a/StepCounter.html
+++ b/StepCounter.html
@@ -51,8 +51,8 @@
       var magnitudeDelta = 	magnitude - previousMagnitutde;
       previousMagnitutde = magnitude;
 
-      var frequency = 60;
-      var cutOffFrequency = 0.2*30;
+      var frequency = 60 * 6.28318530718;
+      var cutOffFrequency = 0.2*30 *6.28318530718;
       var order = 20;
       
       var divide = frequency / cutOffFrequency;
