--- a/StepCounter.html
+++ b/StepCounter.html
@@ -51,15 +51,17 @@
       var magnitudeDelta = 	magnitude - previousMagnitutde;
       previousMagnitutde = magnitude;
 
-      var frequency = 60 * 6.28318530718;
-      var cutOffFrequency = 0.2*30 *6.28318530718;
-      var order = 20;
-      
-      var divide = frequency / cutOffFrequency;
-      var root = 1 + Math.pow(divide, 40);
-      var response = 1 / Math.sqrt(root);
-      var info = document.getElementById("info");
-	    info.innerHTML = response;
+      try{
+      	var frequency = 60 * 6.28318530718;
+	    var cutOffFrequency = 0.2*30 *6.283;
+	    var order = 20;
+	      
+	    var divide = frequency / cutOffFrequency;
+	    var root = 1 + Math.pow(divide, 40);
+	    var response = 1 / Math.sqrt(root);
+	    var info = document.getElementById("info");
+	 	info.innerHTML = response;
+      } catch (error) { }
 
       if(response > 6) {
       	stepCount++;
