--- a/StepCounter.html
+++ b/StepCounter.html
@@ -52,7 +52,7 @@
       previousMagnitutde = magnitude;
 
       try{
-      	var frequency = magnitude * 6.283;
+      	var frequency = magnitudeDelta * 6.283;
 	    var cutOffFrequency = 0.2*30 *6.283;
 	    var order = 20;
 	      
