--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -79,7 +79,10 @@
 		      }
 		}
 
-      } catch (error) { }
+      } catch (error) { 
+	      var info = document.getElementById("info");
+      		info.innerHTML = error;
+      }
 
       
     }
