--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -18,6 +18,10 @@
 	let mAlpha = 0.8;
 	let mLastTime = null;
 		
+	let X =	document.getElementById("X-axis");
+		let Y =	document.getElementById("Y-axis");
+		let Z =	document.getElementById("Z-axis");
+		
 	var mGravity = new Float32Array(3);
 
 	try {
@@ -62,9 +66,9 @@
       		mGravity[1] = lowPassFilter(rawY, mGravity[1]);
       		mGravity[2] = lowPassFilter(rawZ, mGravity[2]);
 
-      		document.getElementById("X-axis").innerHTML = rawX.toString();
-      		document.getElementById("Y-axis").innerHTML = rawY.toString();
-      		document.getElementById("Z-axis").innerHTML = rawZ.toString();
+      		X.innerHTML = rawX.toString();
+      		Y.innerHTML = rawY.toString();
+      		Z.innerHTML = rawZ.toString();
 
       		var info = document.getElementById("info");
       		var magnitude = Math.sqrt(Math.pow(mGravity[0],2) + Math.pow(mGravity[1],2) + Math.pow(mGravity[2] ,2));
