--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -66,9 +66,9 @@
       		mGravity[1] = lowPassFilter(rawY, mGravity[1]);
       		mGravity[2] = lowPassFilter(rawZ, mGravity[2]);
 
-      		X.innerHTML = rawX.toString();
-      		Y.innerHTML = rawY.toString();
-      		Z.innerHTML = rawZ.toString();
+      		X.innerHTML = mGravity[0].toString();
+      		Y.innerHTML = mGravity[1].toString();
+      		Z.innerHTML = mGravity[2].toString();
 
       		var info = document.getElementById("info");
       		var magnitude = Math.sqrt(Math.pow(mGravity[0],2) + Math.pow(mGravity[1],2) + Math.pow(mGravity[2] ,2));
