--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -72,11 +72,12 @@
 
       		var info = document.getElementById("info");
       		var magnitude = Math.sqrt(Math.pow(mGravity[0],2) + Math.pow(mGravity[1],2) + Math.pow(mGravity[2] ,2));
-      		info.innerHTML = magnitude;
+      		
       		var magnitudeDelta = 	magnitude - previousMagnitutde;
+	      info.innerHTML = magnitudeDelta;
       		previousMagnitutde = magnitude;
 
-      		if(magnitude > 6) {
+      		if(magnitudeDelta > 6) {
 		      	stepCount++;
 		      	var output = document.getElementById("center");
 		      	output.innerHTML = stepCount;
