--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -63,7 +63,7 @@
       		var currentAcceleration = previousAcceleration;
 
       		var info = document.getElementById("info");
-      		info.innerHTML = currentAcceleration;
+      		info.innerHTML = maximaPoint;
 
       		var count = accelerationData.length;
 
