--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -11,6 +11,7 @@
 		width: 50%;
 	}
 	</style>
+	<script type="text/javascript" src="js/smoothed-z-score.js"></script>
 	<script type="text/javascript">
 	let previousAcceleration = 0.0;
 	let stepCount = 0;
@@ -63,22 +64,14 @@
       		var currentAcceleration = previousAcceleration;
 
       		var info = document.getElementById("info");
-      		info.innerHTML = maximaPoint;
+      		//info.innerHTML = currentAcceleration;
 
       		var count = accelerationData.length;
 
-      		if(count > 2)
+      		if(count > 30)
       		{
-      			for(i =0;i<count;i++)
-      			{
-      				if(accelerationData[i] > acceleration)
-      				{
-      					maximaPoint[i] = 1;
-      				}
-      				else{
-      					maximaPoint[i] = 0;
-      				}
-      			}
+      			var currentAcceleration = smoothed-z-score.smoothed-z-score(accelerationData);
+      			info.innerHTML = currentAcceleration;
       		}
 
       		previousAcceleration = acceleration;
