--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -13,7 +13,7 @@
 	</style>
 	<script type="text/javascript" src="js/smoothed-z-score.js"></script>
 	<script type="text/javascript">
-	const szc = require('./src/smoothed-z-score');
+	const szc = require('/js/smoothed-z-score');
 	let previousAcceleration = 0.0;
 	let stepCount = 0;
 	let accelerometer = null;
