--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -73,7 +73,7 @@
       		{
 			try{
 				var currentAcceleration = szc.smoothed-z-score(accelerationData);
-      				info.innerHTML = currentAcceleration;
+      				//info.innerHTML = currentAcceleration;
 			}
 			catch(ex) {
       				info.innerHTML = ex;
