--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -65,7 +65,7 @@
       		var currentAcceleration = previousAcceleration;
 
       		var info = document.getElementById("info");
-      		info.innerHTML = currentAcceleration;
+      		info.innerHTML = acceleration;
 
       		var count = accelerationData.length;
 
