--- a/StepCounter2.html
+++ b/StepCounter2.html
@@ -72,7 +72,7 @@
       		if(count > 30)
       		{
 			try{
-				var currentAcceleration = szc.smoothed-z-score(accelerationData);
+				//var currentAcceleration = szc.smoothed-z-score(accelerationData);
       				//info.innerHTML = currentAcceleration;
 			}
 			catch(ex) {
